@@ -29,6 +29,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - viewer - switch from ES bool MUST to FILTER
   - viewer - increase elasticsearchScrollTimeout default
   - viewer - new AND arrays with ][ syntax vs OR arrays with []
+  - viewer - fix --insecure which broke in 3.2.0
 
 3.2.0 2021/12/07
   - release - node 14.18.2
